--- a/hunter.html
+++ b/hunter.html
@@ -25,7 +25,48 @@
   <div class="p-2 bg-dark text-white">Click for help</div>
   <div id="help" class="p-2 bg-warning text-white">Help report</div>
 </div>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+    </div>
+</div>
 
 </div>
 </body>
-</html>"
+</html>
