--- a/hunter.html
+++ b/hunter.html
@@ -28,12 +28,12 @@
 <br>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78/"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
     </div>
 </div>
 <div class="container">
