--- a/hunter.html
+++ b/hunter.html
@@ -38,32 +38,33 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="mouse.webp"></div>
+        <div class="col-sm-2"><img src="mouse.webp"></div>
+        <div class="col-sm-2"><img src="mouse.webp"></div>
+        <div class="col-sm-2"><img src="mouse.webp"></div>
+        <div class="col-sm-2"><img src="mouse.webp"></div>
+        <div class="col-sm-2"><img src="mouse.webp"></div>
     </div>
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="cat.jpg"></div>
+        <div class="col-sm-2"><img src="cat.jpg"></div>
+        <div class="col-sm-2"><img src="cat.jpg"></div>
+        <div class="col-sm-2"><img src="cat.jpg"></div>
+        <div class="col-sm-2"><img src="cat.jpg"></div>
+        <div class="col-sm-2"><img src="cat.jpg"></div>
     </div>
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
-        <div class="col-sm-2"><img src="C:\Users\s560023\OneDrive - nwmissouri.edu\Documents\GitHub\44563-webapps-s23-assignment7-Nikitha78"></div>
+        <div class="col-sm-2"><img src="grass.webp"></div>
+        <div class="col-sm-2"><img src="grass.webp"></div>
+        <div class="col-sm-2"><img src="grass.webp"></div>
+        <div class="col-sm-2"><img src="grass.webp"></div>
+        <div class="col-sm-2"><img src="grass.webp"></div>
+        <div class="col-sm-2"><img src="grass.webp"></div>
+       
     </div>
 </div>
 
