--- a/hunter.html
+++ b/hunter.html
@@ -38,32 +38,32 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="mouse.webp"></div>
-        <div class="col-sm-2"><img src="mouse.webp"></div>
-        <div class="col-sm-2"><img src="mouse.webp"></div>
-        <div class="col-sm-2"><img src="mouse.webp"></div>
-        <div class="col-sm-2"><img src="mouse.webp"></div>
-        <div class="col-sm-2"><img src="mouse.webp"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
     </div>
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="cat.jpg"></div>
-        <div class="col-sm-2"><img src="cat.jpg"></div>
-        <div class="col-sm-2"><img src="cat.jpg"></div>
-        <div class="col-sm-2"><img src="cat.jpg"></div>
-        <div class="col-sm-2"><img src="cat.jpg"></div>
-        <div class="col-sm-2"><img src="cat.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
     </div>
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="grass.webp"></div>
-        <div class="col-sm-2"><img src="grass.webp"></div>
-        <div class="col-sm-2"><img src="grass.webp"></div>
-        <div class="col-sm-2"><img src="grass.webp"></div>
-        <div class="col-sm-2"><img src="grass.webp"></div>
-        <div class="col-sm-2"><img src="grass.webp"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg"></div>
        
     </div>
 </div>
