--- a/hunter.html
+++ b/hunter.html
@@ -28,42 +28,42 @@
 <br>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
     </div>
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
     </div>
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
     </div>
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
-        <div class="col-sm-2"><img src="bush.jpg"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
+        <div class="col-sm-2"><img src="bush.jpg" width="150px" height="150px"></div>
        
     </div>
 </div>
