--- a/react.html
+++ b/react.html
@@ -10,7 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <h2>SANDHYA PALADUGU speed check</h2>
+    <h2>NIKITHA RAVELLA speed check</h2>
 
     <div class="container border bg-success" style="padding-top: 10px; color: rgb(26, 215, 9);">
       <p id="target">Your Time</p>
@@ -23,7 +23,7 @@
     <div class="container">
       <button type="button" class="btn btn-primary" onclick="startTime()">Start Timer</button>
       <button type="button" class="btn btn-info" onclick="recordTime()">React</button>
-      <button type="button" class="btn btn-secondary" onclick="randomStart()">Random Start</button>
+      <!-- <button type="button" class="btn btn-secondary" onclick="randomStart()">Random Start</button> -->
     </div>
     
     
@@ -51,10 +51,10 @@
           }
           },startCount*1000)
       }
-      function randomStart(){
-        startCount = Math.floor(Math.random()*(10-2+1)+2)
-        startTime()
-    }
+    //   function randomStart(){
+    //     startCount = Math.floor(Math.random()*(10-2+1)+2)
+    //     startTime()
+    // }
     </script>
   
 
